--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,11 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'io.netty:netty-all:4.1.49.Final'
 
+        implementation 'com.google.guava:guava:20.0'
+        implementation 'commons-net:commons-net:3.7.2'
+        implementation 'org.apache.curator:curator-recipes:2.7.0'
+        implementation 'org.apache.curator:curator-x-discovery:2.7.0'
+
         implementation 'commons-io:commons-io:2.6'
         implementation 'org.apache.commons:commons-lang3:3.1'
         compileOnly 'org.projectlombok:lombok'
